float issue fixed with overflow

--- a/miu-study/cs472-WAP/w1d4movie/movie.css
+++ b/miu-study/cs472-WAP/w1d4movie/movie.css
@@ -60,13 +60,17 @@ body .wrapper .cnt-main{
     border: solid 2px gray;
     border-radius: 10px;
     padding: 8px;
+    overflow: hidden;
+
 }
 .cnt-main .cnt-lft .inner .qbox img{
     margin-right: 5px;
-    vertical-align: top;
+    float: left;
+    
 }
 .cnt-main .cnt-lft .inner .reviewer{
     margin-bottom: 20pt;
+    overflow: hidden;
 }
 .cnt-main .cnt-lft .inner .reviewer .publication{
     font-style: italic;
